# justplay

./: Makefile  README.md  README.org  cookiecutter.json  go.mod  main.go  pyproject.toml
cmd/: root.go
src/awaybeen/: __init__.py  __main__.py  main2.py
{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/src/awaybeen/: __init__.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  cli.py  config.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/templates/: base.j2  extended.j2
