[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
dependencies = [
    "jinja2>=3.1.3"
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]

[tool.ruff.lint]
extend-select = ["I"]